always close the input channel of a text decryption

Otherwise the decryption never starts with GnuPG 2.3.

BUG:444848